git-annex (0.20110317) UNRELEASED; urgency=low

  * Fix dropping of files using the URL backend.
  * Fix support for remotes with '.' in their names.

 -- Joey Hess <joeyh@debian.org>  Thu, 17 Mar 2011 11:46:53 -0400

git-annex (0.20110316) experimental; urgency=low

  * New repository format, annex.version=2.
  * The first time git-annex is run in an old format repository, it
    will automatically upgrade it to the new format, staging all
    necessary changes to git. Also added a "git annex upgrade" command.
  * Colons are now avoided in filenames, so bare clones of git repos
    can be put on USB thumb drives formatted with vFAT or similar
    filesystems.
  * Added two levels of hashing to object directory and .git-annex logs,
    to improve scalability with enormous numbers of annexed
    objects. (With one hundred million annexed objects, each
    directory would contain fewer than 1024 files.)
  * The setkey, fromkey, and dropkey subcommands have changed how
    the key is specified. --backend is no longer used with these.

 -- Joey Hess <joeyh@debian.org>  Wed, 16 Mar 2011 16:20:23 -0400

git-annex (0.24) unstable; urgency=low

  Branched the 0.24 series, which will be maintained for a while to
  support v1 git-annex repos, while main development moves to the 0.2011
  series, with v2 git-annex repos.

  * Add Suggests on graphviz. Closes: #618039
  * When adding files to the annex, the symlinks pointing at the annexed
    content are made to have the same mtime as the original file.
    While git does not preserve that information, this allows a tool
    like metastore to be used with annexed files.
    (Currently this is only done on systems supporting POSIX 200809.)

 -- Joey Hess <joeyh@debian.org>  Wed, 16 Mar 2011 18:35:13 -0400

git-annex (0.23) unstable; urgency=low

  * Support ssh remotes with a port specified.
  * whereis: New subcommand to show where a file's content has gotten to.